@@ -1,6 +1,6 @@
 # Chipset: Quectel LC79D
 # Submitter: Filip Jan Kubicz <filip.kubicz@tier.app>
-# Date: 30 November 2020
+# Date: 2020-11-30
 # Location: Kamien, Poland, 50.02457296N 19.58828604E
 #
 # Note: Odd PRN 102 in GAGSV.
