@@ -1,38 +1,38 @@
-$GPRMC,040929.00,V,,S,,W,0.0000,0.000,120419,,*22
+$GPRMC,040929.00,V,,S,,W,0.0000,0.000,270899,,*20
 $GPGSA,A,1,,,,,,,,,,,,,,,,*32
-{"class":"TPV","mode":1,"time":"2019-04-12T04:09:29.000Z","ept":0.005}
-$GPRMC,040930.00,V,2037.7075,N,08704.0535,W,,,120419,-2.0,W*6A
+{"class":"TPV","mode":1,"time":"1999-08-27T04:09:29.000Z","ept":0.005}
+$GPRMC,040930.00,V,2037.7075,N,08704.0535,W,,,270899,-2.0,W*68
 $GPGSA,A,1,,,,,,,,,,,,,2.9,2.3,1.7*3C
-{"class":"TPV","mode":0,"time":"2019-04-12T04:09:30.000Z","ept":0.005}
+{"class":"TPV","mode":0,"time":"1999-08-27T04:09:30.000Z","ept":0.005}
 $GPGGA,040930.00,2037.7075,N,08704.0535,W,1,05,2.34,27.90,M,-15.010,M,,*6F
-$GPRMC,040930.00,A,2037.7075,N,08704.0535,W,0.0000,0.000,120419,-2.0,W*4D
+$GPRMC,040930.00,A,2037.7075,N,08704.0535,W,0.0000,0.000,270899,-2.0,W*4F
 $GPGSA,A,3,,,,,,,,,,,,,2.9,2.3,1.7*3E
-{"class":"TPV","mode":3,"time":"2019-04-12T04:09:30.000Z","ept":0.005,"lat":20.628457567,"lon":-87.067558169,"altHAE":12.8922,"altMSL":27.9021,"alt":27.9021,"epv":39.373,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.000,"climb":0.000,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.377,"sep":55.020}
-$GPRMC,040931.00,V,2037.7075,N,08704.0535,W,,,120419,-2.0,W*6B
+{"class":"TPV","mode":3,"time":"1999-08-27T04:09:30.000Z","ept":0.005,"lat":20.628457567,"lon":-87.067558169,"altHAE":12.8922,"altMSL":27.9021,"alt":27.9021,"epv":39.373,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.000,"climb":0.000,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.377,"sep":55.020}
+$GPRMC,040931.00,V,2037.7075,N,08704.0535,W,,,270899,-2.0,W*69
 $GPGSA,A,1,,,,,,,,,,,,,,,,*32
-{"class":"TPV","mode":1,"time":"2019-04-12T04:09:31.000Z","ept":0.005}
+{"class":"TPV","mode":1,"time":"1999-08-27T04:09:31.000Z","ept":0.005}
 $GPGGA,040931.00,2037.7075,N,08704.0535,W,1,05,2.34,27.90,M,-15.010,M,,*6E
-$GPRMC,040931.00,A,2037.7075,N,08704.0535,W,0.0000,0.000,120419,-2.0,W*4C
+$GPRMC,040931.00,A,2037.7075,N,08704.0535,W,0.0000,0.000,270899,-2.0,W*4E
 $GPGSA,A,3,,,,,,,,,,,,,2.9,2.3,1.7*3E
-{"class":"TPV","mode":3,"time":"2019-04-12T04:09:31.000Z","ept":0.005,"lat":20.628457697,"lon":-87.067558187,"altHAE":12.8941,"altMSL":27.9039,"alt":27.9039,"epv":39.384,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.000,"climb":0.000,"epc":78.76,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
-$GPZDA,040932.00,12,04,2019,00,00*67
+{"class":"TPV","mode":3,"time":"1999-08-27T04:09:31.000Z","ept":0.005,"lat":20.628457697,"lon":-87.067558187,"altHAE":12.8941,"altMSL":27.9039,"alt":27.9039,"epv":39.384,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.000,"climb":0.000,"epc":78.76,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
+$GPZDA,040932.00,27,08,1999,00,00*6F
 $GPGGA,040932.00,2037.7075,N,08704.0535,W,1,05,2.34,27.91,M,-15.010,M,,*6C
-$GPRMC,040932.00,A,2037.7075,N,08704.0535,W,0.0308,,120419,-2.0,W*6A
+$GPRMC,040932.00,A,2037.7075,N,08704.0535,W,0.0308,,270899,-2.0,W*68
 $GPGSA,A,3,,,,,,,,,,,,,2.9,2.3,1.7*3E
-{"class":"TPV","mode":3,"time":"2019-04-12T04:09:32.000Z","ept":0.005,"lat":20.628457840,"lon":-87.067558197,"altHAE":12.8959,"altMSL":27.9058,"alt":27.9058,"epv":39.384,"magvar":-2.0,"speed":0.016,"climb":0.002,"epc":78.77,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
+{"class":"TPV","mode":3,"time":"1999-08-27T04:09:32.000Z","ept":0.005,"lat":20.628457840,"lon":-87.067558197,"altHAE":12.8959,"altMSL":27.9058,"alt":27.9058,"epv":39.384,"magvar":-2.0,"speed":0.016,"climb":0.002,"epc":78.77,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
 $GPGGA,040932.00,2037.7075,N,08704.0535,W,1,05,2.34,27.91,M,-15.010,M,,*6C
-$GPRMC,040932.00,A,2037.7075,N,08704.0535,W,0.0308,0.000,120419,-2.0,W*44
+$GPRMC,040932.00,A,2037.7075,N,08704.0535,W,0.0308,0.000,270899,-2.0,W*46
 $GPGSA,A,3,,,,,,,,,,,,,2.9,2.3,1.7*3E
-{"class":"TPV","mode":3,"time":"2019-04-12T04:09:32.000Z","ept":0.005,"lat":20.628457840,"lon":-87.067558197,"altHAE":12.8959,"altMSL":27.9058,"alt":27.9058,"epv":39.384,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.016,"climb":0.002,"epc":78.77,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
-$GPZDA,040933.00,12,04,2019,00,00*66
+{"class":"TPV","mode":3,"time":"1999-08-27T04:09:32.000Z","ept":0.005,"lat":20.628457840,"lon":-87.067558197,"altHAE":12.8959,"altMSL":27.9058,"alt":27.9058,"epv":39.384,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.016,"climb":0.002,"epc":78.77,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
+$GPZDA,040933.00,27,08,1999,00,00*6E
 $GPGGA,040933.00,2037.7075,N,08704.0535,W,1,05,2.34,27.91,M,-15.010,M,,*6D
-$GPRMC,040933.00,A,2037.7075,N,08704.0535,W,0.0324,,120419,-2.0,W*65
+$GPRMC,040933.00,A,2037.7075,N,08704.0535,W,0.0324,,270899,-2.0,W*67
 $GPGSA,A,3,,,,,,,,,,,,,2.9,2.3,1.7*3E
-{"class":"TPV","mode":3,"time":"2019-04-12T04:09:33.000Z","ept":0.005,"lat":20.628457990,"lon":-87.067558204,"altHAE":12.8974,"altMSL":27.9073,"alt":27.9073,"epv":39.384,"magvar":-2.0,"speed":0.017,"climb":0.002,"epc":78.77,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
+{"class":"TPV","mode":3,"time":"1999-08-27T04:09:33.000Z","ept":0.005,"lat":20.628457990,"lon":-87.067558204,"altHAE":12.8974,"altMSL":27.9073,"alt":27.9073,"epv":39.384,"magvar":-2.0,"speed":0.017,"climb":0.002,"epc":78.77,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
 $GPGGA,040937.53,2037.7075,N,08704.0535,W,1,05,2.34,27.91,M,-15.010,M,,*6F
 $GPRMC,040937.53,A,2037.7075,N,08704.0535,W,0.0324,0.000,221206,-2.0,W*43
 $GPGSA,A,3,,,,,,,,,,,,,2.9,2.3,1.7*3E
-{"class":"TPV","mode":3,"time":"2006-12-22T04:09:37.531Z","leapseconds":14,"ept":0.005,"lat":20.628457990,"lon":-87.067558204,"altHAE":12.8974,"altMSL":27.9073,"alt":27.9073,"epv":39.384,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.017,"climb":0.002,"epc":78.77,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
+{"class":"TPV","mode":3,"time":"2006-12-22T04:09:37.531Z","leapseconds":14,"ept":0.005,"lat":20.628457990,"lon":-87.067558204,"altHAE":12.8974,"altMSL":27.9073,"alt":27.9073,"epv":39.384,"track":0.0000,"magtrack":358.0076,"magvar":-2.0,"speed":0.017,"climb":0.002,"epc":0.00,"velN":0.000,"velE":0.000,"velD":0.000,"geoidSep":-15.010,"eph":44.392,"sep":55.038}
 $GPZDA,040938.00,22,12,2006,00,00*67
 $GPGGA,040938.00,2037.7075,N,08704.0535,W,1,05,2.34,27.91,M,-15.010,M,,*66
 $GPRMC,040938.00,A,2037.7075,N,08704.0535,W,0.0730,,221206,-2.0,W*65
