@@ -1,7 +1,7 @@
 # Name: ZED-F9P NMEA
 # Chipset: u-blox  ZED-F9P, firmware hpg1.11
 # Submitter: Luke Reid <luke@geocam.xyz>
-# Date: 2019-April 12
+# Date: 2019-04-12
 # Location: 45.877591500S 170.500124833E
 #           Dunedin, New Zealand
 #
