@@ -23,6 +23,8 @@
   contrib/webgps.py: use argparse, arguments -V, --version, --no-html-head.
   Add readonly flag to DEVICE JSON.
   Control messages to gpsd now return JSON, instead of, sometimes, OK or ERROR.
+  gpsfake uses "# Date: yyyy-mm-dd" to set initial time.
+  Don't compute wrong GPS rollover after 2020-10-23.
 
 3.22: 2021-01-08
   Added client/gpscsv to convert gpsd JSON to csv.
